--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -52,6 +52,9 @@
 </head>
 
 <body>
+    <!-- for email animation -->
+    {% include "blog/components/email_animation.html" %}
+
     <header class="sticky-top">
         {% if current == 'homepage' %}
             {% include "blog/components/navbar_home.html" %}
