--- a/blog/templates/blog/certificate_detail.html
+++ b/blog/templates/blog/certificate_detail.html
@@ -4,7 +4,7 @@
 
 {% block script %}
 <link rel="stylesheet" href="{% static 'blog/css/components/project_card.css' %}">
-<link rel="stylesheet" href="{% static 'blog/css/components/certificate_card.css' %}">
+{% comment %} <link rel="stylesheet" href="{% static 'blog/css/components/certificate_card.css' %}"> {% endcomment %}
 
     <link rel="stylesheet" href="{% static 'blog/css/project.css' %}">
 {% endblock script %}
