--- a/blog/templates/blog/components/certificates/certificate_card.html
+++ b/blog/templates/blog/components/certificates/certificate_card.html
@@ -8,13 +8,13 @@
             <h3 class="color-action">{{certificate.title}}</h3>
             <p class="mb-3">{{certificate.description}}</p>
 
-            <p class="mb-0">This certificate required</p>
+            <p class="mb-0">To obtain this certificate it was necessary to do the following:</p>
             <!-- excercises -->
-            {% if certificate.excercises  %}
+            {% if certificate.exercises  %}
             <div>
                 <span class="">
-                    <img class="small-icon icon-me-1" src="{% static 'blog/icons/white-verified.svg' %}" alt="github icon">
-                    <span>{{certificate.excercises}} Excercises</span>
+                    <img class="small-icon icon-me-1" src="{% static 'blog/icons/white-verified.svg' %}" alt="verified icon">
+                    <span>{{certificate.exercises}} Excercises</span>
                 </span>
             </div>
             {% endif %}
@@ -23,7 +23,7 @@
             {% if certificate.project  %}
             <div>
                 <span class="">
-                    <img class="small-icon icon-me-1" src="{% static 'blog/icons/white-verified.svg' %}" alt="globe icon">
+                    <img class="small-icon icon-me-1" src="{% static 'blog/icons/white-verified.svg' %}" alt="verified icon">
                     <span>{{certificate.project}} Project{{ certificate.project | pluralize }}</span>
                 </span>
             </div>
@@ -41,8 +41,8 @@
             {% endfor %}
         </div>
 
-        <div class="col-12 col-md-6 col-lg-6 d-flex flex-column justify-content-evenly text-start text-md-center">
-            <h5 class="text-center">External Resources</h5>
+        <div class="col-12 col-md-6 col-lg-6 d-flex flex-column justify-content-evenly  text-md-center">
+            <h5 class="">External Resources</h5>
             <!-- source -->
             <div>
                 <a class="nav-link" href="{{certificate.src}}" target="_blank">
@@ -68,7 +68,7 @@
             <!-- availlable_projects -->
             {% if certificate.available_projects  %}
             <div class="mt-3">
-                <h5 class="text-center">Related Projects on this site</h5>
+                <h5 class="">Related Projects on this site</h5>
 
                 {% for project in certificate.available_projects.all %}
                 <a class="nav-link my-2" href="{{project.get_absolute_url}}" >
