--- a/blog/templates/blog/homepage.html
+++ b/blog/templates/blog/homepage.html
@@ -262,7 +262,7 @@
                     </div>
                     <div class="col-auto">
 
-                        <a href="https://www.linkedin.com/in/keiner-asael-mendoza-andrade-988ab594/" class="nav-link net-icon  n" target="_blank">
+                        <a href="https://www.linkedin.com/in/keiner-asael-mendoza-andrade-988ab594/" class="nav-link net-icon" target="_blank">
                             <figure class="social-icon">
                                 <img src="{% static 'blog/icons/linkedin.svg' %}" alt="linkedin icon">
                             </figure>
@@ -305,7 +305,7 @@
                             <label class for="request_body">Your Message</label>
                             <textarea class="form-control mt-2 mb-4" name="message" id="request_body" cols="30" rows="6"></textarea>
                             <div class="text-end">
-                                <input class="fs-5 btn btn-primary" type="submit" value="Send">
+                                <input id="email-contact-btn" class="fs-5 btn btn-primary" type="submit" value="Send">
                             </div>
                         </form>
                     </div>
