meta image as hardcode url

--- a/blog/templates/blog/components/certificates/certificate_card.html
+++ b/blog/templates/blog/components/certificates/certificate_card.html
@@ -31,7 +31,7 @@
         </article>
 
         <figure class="col-12 col-lg-6 col-xxl-5 d-flex justify-align-center  my-4 my-lg-0">
-            <img style="object-fit:contain" class="" src="{{ certificate.image.url }}" alt="{{certificate.title}}">
+            <img style="object-fit:contain" class="" src="{% static certificate.image.url %}" alt="{{certificate.title}}">
         </figure>
 
         <div class="col-12 col-md-6 col-lg-6">
