--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -8,7 +8,7 @@
     <meta name="description" description="Keiner Mendoza is a web developer that makes use of different technologies for the web creation, since raw HTML CSS and JavaScript to the use of developer frameworks like Django and React." >
     <meta
     property="og:image"
-    content="{% static 'blog/images/profile.jpg' %} %}" />
+    content="https://keinermendoza.com/static/blog/images/profile.jpg" />
 
     <meta property="og:title" content="Keiner Mendoza Web Developer" />
     <meta name="twitter:title" content="Keiner Mendoza is a Web Developer who likes to solve problems and create websites. with knowledge of HTML, CSS, JavaScript, also Python, Django Framework and related technologies." />
@@ -18,14 +18,14 @@
     <meta property="og:url" content="{% url 'home' %}">
     <meta property="og:title" content="Keiner Mendoza. Web Developer">
     <meta property="og:description" content="Keiner Mendoza is a Web Developer who likes to solve problems and create websites. with knowledge of HTML, CSS, JavaScript, also Python, Django Framework and related technologies.">
-    <meta property="og:image" content="{% static 'blog/images/profile.jpg' %}">
+    <meta property="og:image" content="https://keinermendoza.com/static/blog/images/profile.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="{% url 'home' %}">
     <meta property="twitter:title" content="Keiner Mendoza. Web Developer.">
     <meta property="twitter:description" content="Keiner Mendoza is a Web Developer who likes to solve problems and create websites. with knowledge of HTML, CSS, JavaScript, also Python, Django Framework and related technologies.">
-    <meta property="twitter:image" content="{% static 'blog/images/profile.jpg' %}">
+    <meta property="twitter:image" content="https://keinermendoza.com/static/blog/images/profile.jpg">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
