--- a/blog/static/blog/css/general.css
+++ b/blog/static/blog/css/general.css
@@ -212,3 +212,80 @@ then just i toggled the active class  */
     animation-iteration-count: infinite;
     
 }
+
+/* FOOTER */
+
+.footer {
+    background-color: gray;
+    color: black !important;
+}
+.icon-footer-heart {
+    position: relative;
+    bottom: 2px;
+    left: 2px;
+}
+
+li {
+    list-style: none;
+}
+
+a {
+    color:black;
+}
+
+/* PROJECT CARD */
+.certified-img , .product-img {
+    overflow:hidden;
+    height: 40%;
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
+    margin: 0;
+}
+.certified-img > img, .product-img > img {
+    object-fit: cover;
+    object-position: center top;
+    width: 100%;
+    height: 100%;
+}
+
+.project-card:hover {
+    color:black !important;
+}
+
+/* PROJECT PAGE */
+
+.projects {
+    color:white;
+}
+.child-max-400px > * {
+    max-width: 400px;
+}
+
+
+.ytiframe {
+    aspect-ratio: 16/9;
+    width: 100%;
+    background: black;
+    max-height: 70vh;
+    display: flex;
+    justify-content: center
+}
+
+.ytiframe__iframe {
+    height: 100%;
+    aspect-ratio: 16/9;
+    margin: 0;
+    padding: 0;
+    max-height: 70vh
+}
+
+
+.ytiframe .klaro.cm-as-context-notice button {
+    padding-left: 3ch;
+    padding-right: 3ch
+}
+
+.iframe {
+    width: 100%;
+    height: 100%
+}
