--- a/static/blog/css/general.css
+++ b/static/blog/css/general.css
@@ -141,3 +141,74 @@ main {
 .child-max-400px > * {
     max-width: 400px;
 }
+
+
+/* EMAIL ANIMATION */
+/* for active the entire animation used another common class 
+call email-animation-switch
+then just i toggled the active class  */
+
+.email-animation-container {
+    z-index: 100;
+    min-height:110%;
+    min-width: 110%;
+    background-color: rgba(0,0,0,0.8);
+    position: fixed;
+    margin: -50px;
+    place-content:center;
+
+    display:none;
+}
+.email-animation-container.active {
+    display:grid;
+}
+@keyframes to-right-200 {
+    0% {
+        display: block;
+    }
+    100% {
+        transform: translateX(200px);
+    }
+}
+@keyframes grow {
+    0% {
+        background-color: rgb(29, 109, 109);
+        scale: .9;
+    }
+    100% {
+        scale: 1.3;
+        background-color: rgb(0, 255, 255);
+    }
+}
+
+.email-animation.active {
+    ---animation--steps--time: 3s;
+
+    width: 200px;
+    height:200px;
+    inset:0;
+    position: realtive;
+   
+    /* animation */
+    animation-name: to-right-200;
+    animation-duration: var(---animation--steps--time);
+    animation-timing-function: steps(4);
+    animation-iteration-count: infinite;
+
+}
+
+.email-animation-spiner.active {
+    --circle-dimensions: 30px;
+    box-shadow: 0 0 20px rgb(54, 53, 53);
+    border-radius:50%;
+    
+    margin: 30px;
+    width: var(--circle-dimensions);
+    height: var(--circle-dimensions);
+
+    /* animation */
+    animation-name: grow;
+    animation-duration: calc(var(---animation--steps--time) / 4);
+    animation-iteration-count: infinite;
+    
+}
